--- a/Scripts/JavaScript/api-petshop-alura/package.json
+++ b/Scripts/JavaScript/api-petshop-alura/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -L api/index.js"
+    "start": "nodemon api/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,6 @@
     "config": "^3.3.7",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15",
     "sequelize": "^6.13.0"
   }
 }
