--- a/Scripts/JavaScript/api-petshop-alura/package.json
+++ b/Scripts/JavaScript/api-petshop-alura/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.1",
     "config": "^3.3.7",
     "express": "^4.17.2",
+    "jsontoxml": "^1.0.1",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
     "sequelize": "^6.13.0"
   }
 }
