Módulo de react da gostack terminado

--- a/Scripts/React/frontend/package.json
+++ b/Scripts/React/frontend/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "axios": "^0.25.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
@@ -22,6 +23,7 @@
     "webpack-cli": "^4.9.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.16.10",
     "webpack-dev-server": "^4.7.3"
   }
 }
