--- a/Scripts/JavaScript/GoStack/BackEnd/package.json
+++ b/Scripts/JavaScript/GoStack/BackEnd/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
