--- a/Scripts/GoStack/PrimeiroProjetoTypeScript/package.json
+++ b/Scripts/GoStack/PrimeiroProjetoTypeScript/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.28.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   }
